--- a/src/index.debug.html
+++ b/src/index.debug.html
@@ -10,21 +10,23 @@
     <div ui-view></div>
 </div>
 
-
-<div id="container"></div>
-
 <!-- vendor -->
 <script src="vendor/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script src="vendor/highcharts.src.js" type="text/javascript"></script>
+<script src="vendor/highcharts.js" type="text/javascript"></script>
 <script src="vendor/angular.js" type="text/javascript"></script>
 <script src="vendor/angular-ui-router.min.js" type="text/javascript"></script>
+<script src="vendor/underscore.min.js" type="text/javascript"></script>
 
 <!-- app -->
 <script src="app/app.js" type="text/javascript"></script>
+<script src="app/underscore/module.js" type="text/javascript"></script>
 <script src="app/api/module.js" type="text/javascript"></script>
 <script src="app/charts/module.js" type="text/javascript"></script>
+<script src="app/charts/highCharts.js" type="text/javascript"></script>
+<script src="app/constants/campaignMode.js" type="text/javascript"></script>
+<script src="app/factories/campaignsConverter.js" type="text/javascript"></script>
 <script src="app/controllers/campaignsController.js" type="text/javascript"></script>
-<script src="app/directives/lgCampaigns.js" type="text/javascript"></script>
+<script src="app/directives/campaigns.js" type="text/javascript"></script>
 
 </body>
 </html>
